--- a/package.json
+++ b/package.json
@@ -1,39 +1,45 @@
 {
-  "name": "meta-front-end-developer-capstone",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.3.1",
-    "@testing-library/user-event": "^14.5.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "meta-front-end-developer-capstone",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@heroicons/react": "^2.1.5",
+		"@testing-library/jest-dom": "^5.17.0",
+		"@testing-library/react": "^14.3.1",
+		"@testing-library/user-event": "^14.5.2",
+		"classnames": "^2.5.1",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-router-dom": "^6.26.2",
+		"react-scripts": "5.0.1",
+		"web-vitals": "^2.1.4"
+	},
+	"devDependencies": {
+		"tailwindcss": "^3.4.12"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"tailwind": "npx tailwindcss -i ./src/styles/tailwind.css -o ./src/styles/tailwind.min.css --watch",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
