--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
+		"preview": "npm run tailwind:build && react-scripts build && react-scripts start",
 		"tailwind": "npx tailwindcss -i ./src/styles/tailwind.css -o ./src/styles/tailwind.min.css --watch",
+		"tailwind:build": "npx tailwindcss -i ./src/styles/tailwind.css -o ./src/styles/tailwind.min.css",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
