--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
 		"@testing-library/react": "^14.3.1",
 		"@testing-library/user-event": "^14.5.2",
 		"classnames": "^2.5.1",
+		"formik": "^2.2.9",
+		"luxon": "^3.5.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^6.26.2",
 		"react-scripts": "5.0.1",
-		"web-vitals": "^2.1.4"
+		"web-vitals": "^2.1.4",
+		"yup": "^0.32.11"
 	},
 	"devDependencies": {
 		"tailwindcss": "^3.4.12"
