--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"yup": "^0.32.11"
 	},
 	"devDependencies": {
+		"@tailwindcss/forms": "^0.5.9",
 		"tailwindcss": "^3.4.12"
 	},
 	"scripts": {
